openshift/templates/backup-artifacts/s2i-app-project/dc-s2i-app.yaml
apiVersion: v1
items:
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: "2020-05-29T23:27:48Z"
    generation: 2
    labels:
      template: mysql-ephemeral-template
      template.openshift.io/template-instance-owner: 79a9cd7e-8ed7-49a7-ac8a-78c5ad06b900
    name: mysql
    namespace: s2i-app
    resourceVersion: "1606687"
    selfLink: /apis/apps.openshift.io/v1/namespaces/s2i-app/deploymentconfigs/mysql
    uid: 02345b70-a204-11ea-a4f2-0a580a820010
  spec:
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      name: mysql
    strategy:
      activeDeadlineSeconds: 21600
      recreateParams:
        timeoutSeconds: 600
      resources: {}
      type: Recreate
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          name: mysql
      spec:
        containers:
        - env:
          - name: MYSQL_USER
            valueFrom:
              secretKeyRef:
                key: database-user
                name: mysql
          - name: MYSQL_PASSWORD
            valueFrom:
              secretKeyRef:
                key: database-password
                name: mysql
          - name: MYSQL_ROOT_PASSWORD
            valueFrom:
              secretKeyRef:
                key: database-root-password
                name: mysql
          - name: MYSQL_DATABASE
            valueFrom:
              secretKeyRef:
                key: database-name
                name: mysql
          image: image-registry.openshift-image-registry.svc:5000/openshift/mysql@sha256:9a781abe7581cc141e14a7e404ec34125b3e89c008b14f4e7b41e094fd3049fe
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 3306
            timeoutSeconds: 1
          name: mysql
          ports:
          - containerPort: 3306
            protocol: TCP
          readinessProbe:
            exec:
              command:
              - /bin/sh
              - -i
              - -c
              - MYSQL_PWD="$MYSQL_PASSWORD" mysql -h 127.0.0.1 -u $MYSQL_USER -D $MYSQL_DATABASE
                -e 'SELECT 1'
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              memory: 512Mi
          securityContext:
            capabilities: {}
            privileged: false
            procMount: Default
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /var/lib/mysql/data
            name: mysql-data
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - emptyDir: {}
          name: mysql-data
    test: false
    triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
        - mysql
        from:
          kind: ImageStreamTag
          name: mysql:5.7
          namespace: openshift
        lastTriggeredImage: image-registry.openshift-image-registry.svc:5000/openshift/mysql@sha256:9a781abe7581cc141e14a7e404ec34125b3e89c008b14f4e7b41e094fd3049fe
      type: ImageChange
    - type: ConfigChange
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2020-05-29T23:27:58Z"
      lastUpdateTime: "2020-05-29T23:28:33Z"
      message: replication controller "mysql-1" successfully rolled out
      reason: NewReplicationControllerAvailable
      status: "True"
      type: Progressing
    - lastTransitionTime: "2020-05-31T00:09:00Z"
      lastUpdateTime: "2020-05-31T00:09:00Z"
      message: Deployment config has minimum availability.
      status: "True"
      type: Available
    details:
      causes:
      - type: ConfigChange
      message: config change
    latestVersion: 1
    observedGeneration: 2
    readyReplicas: 1
    replicas: 1
    unavailableReplicas: 0
    updatedReplicas: 1
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: "2020-05-30T19:16:34Z"
    generation: 7
    labels:
      app: spring-boot-s2i-app-git
      app.kubernetes.io/component: spring-boot-s2i-app-git
      app.kubernetes.io/instance: spring-boot-s2i-app-git
      app.kubernetes.io/name: java
      app.kubernetes.io/part-of: spring-boot-s-2-i-app-git-app
      app.openshift.io/runtime: java
      app.openshift.io/runtime-version: "8"
    name: spring-boot-s2i-app-git
    namespace: s2i-app
    resourceVersion: "1699638"
    selfLink: /apis/apps.openshift.io/v1/namespaces/s2i-app/deploymentconfigs/spring-boot-s2i-app-git
    uid: 1368cb3b-a2aa-11ea-b39b-0a580a820010
  spec:
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      app: spring-boot-s2i-app-git
      deploymentconfig: spring-boot-s2i-app-git
    strategy:
      activeDeadlineSeconds: 21600
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          app: spring-boot-s2i-app-git
          deploymentconfig: spring-boot-s2i-app-git
      spec:
        containers:
        - env:
          - name: LOGGING_LEVEL_ORG_HIBERNATE_SQL
            valueFrom:
              configMapKeyRef:
                key: logging.level.org.hibernate.SQL
                name: s2i-cm
          - name: SPRING_DATASOURCE_DRIVER_CLASS_NAME
            valueFrom:
              configMapKeyRef:
                key: spring.datasource.driver.class.name
                name: s2i-cm
          - name: SPRING_DATASOURCE_TOMCAT_MAX_ACTIVE
            valueFrom:
              configMapKeyRef:
                key: spring.datasource.tomcat.max-active
                name: s2i-cm
          - name: SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT
            valueFrom:
              configMapKeyRef:
                key: spring.jpa.properties.hibernate.dialect
                name: s2i-cm
          - name: SPRING_JPA_PROPERTIES_HIBERNATE_ID_NEW_GENERATOR_MAPPINGS
            valueFrom:
              configMapKeyRef:
                key: spring.jpa.properties.hibernate.id.new_generator_mappings
                name: s2i-cm
          - name: CAT_FACT_URL
            valueFrom:
              configMapKeyRef:
                key: cat-fact.url
                name: s2i-cm
          - name: LOGGING_LEVEL_ORG_HIBERNATE_TYPE_DESCRIPTOR_SQL_BASICBINDER
            valueFrom:
              configMapKeyRef:
                key: logging.level.org.hibernate.type.descriptor.sql.BasicBinder
                name: s2i-cm
          - name: SPRING_DATASOURCE_TOMCAT_MAX_IDLE
            valueFrom:
              configMapKeyRef:
                key: spring.datasource.tomcat.max-idle
                name: s2i-cm
          - name: SPRING_DATASOURCE_TOMCAT_MAX_WAIT
            valueFrom:
              configMapKeyRef:
                key: spring.datasource.tomcat.max-wait
                name: s2i-cm
          - name: SPRING_DATASOURCE_TOMCAT_MIN_IDLE
            valueFrom:
              configMapKeyRef:
                key: spring.datasource.tomcat.min-idle
                name: s2i-cm
          - name: SPRING_DATASOURCE_URL
            valueFrom:
              configMapKeyRef:
                key: spring.datasource.url
                name: s2i-cm
          - name: SPRING_JPA_PROPERTIES_HIBERNATE_FORMAT_SQL
            valueFrom:
              configMapKeyRef:
                key: spring.jpa.properties.hibernate.format_sql
                name: s2i-cm
          - name: SPRING_DATASOURCE_PASSWORD
            valueFrom:
              secretKeyRef:
                key: spring.datasource.password
                name: s2i-sec
          - name: SPRING_DATASOURCE_USERNAME
            valueFrom:
              secretKeyRef:
                key: spring.datasource.username
                name: s2i-sec
          - name: SERVER_SSL_KEY_STORE
            valueFrom:
              configMapKeyRef:
                key: server.ssl.key-store
                name: s2i-cm
          - name: SERVER_SSL_KEY_STORE_PASSWORD
            valueFrom:
              configMapKeyRef:
                key: server.ssl.key-store-password
                name: s2i-cm
          - name: SERVER_PORT
            valueFrom:
              configMapKeyRef:
                key: server.port
                name: s2i-cm
          - name: SERVER_USE_FORWARD_HEADERS
            valueFrom:
              configMapKeyRef:
                key: server.use-forward-headers
                name: s2i-cm
          image: image-registry.openshift-image-registry.svc:5000/s2i-app/spring-boot-s2i-app-git@sha256:b1ba079fde018cba75ebc4ee7536cbe8b3657ccc207f005fd7310b5a1cdaaf96
          imagePullPolicy: Always
          name: spring-boot-s2i-app-git
          ports:
          - containerPort: 8080
            protocol: TCP
          - containerPort: 8443
            protocol: TCP
          - containerPort: 8778
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /etc/keystore
            name: keystore-volume
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - name: keystore-volume
          secret:
            defaultMode: 420
            secretName: s2i-app-keystore-secret
    test: false
    triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
        - spring-boot-s2i-app-git
        from:
          kind: ImageStreamTag
          name: spring-boot-s2i-app-git:latest
          namespace: s2i-app
        lastTriggeredImage: image-registry.openshift-image-registry.svc:5000/s2i-app/spring-boot-s2i-app-git@sha256:b1ba079fde018cba75ebc4ee7536cbe8b3657ccc207f005fd7310b5a1cdaaf96
      type: ImageChange
    - type: ConfigChange
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2020-05-31T02:57:32Z"
      lastUpdateTime: "2020-05-31T02:57:32Z"
      message: Deployment config has minimum availability.
      status: "True"
      type: Available
    - lastTransitionTime: "2020-05-31T03:04:11Z"
      lastUpdateTime: "2020-05-31T03:04:14Z"
      message: replication controller "spring-boot-s2i-app-git-6" successfully rolled
        out
      reason: NewReplicationControllerAvailable
      status: "True"
      type: Progressing
    details:
      causes:
      - type: Manual
      message: manual change
    latestVersion: 6
    observedGeneration: 7
    readyReplicas: 1
    replicas: 1
    unavailableReplicas: 0
    updatedReplicas: 1
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
