openshift/templates/backup-artifacts/s2i-app-project/route-s2i-app.yaml
apiVersion: v1
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2020-05-31T02:47:07Z"
    labels:
      app: spring-boot-s2i-app-git
    name: spring-boot-s2i-app-git
    namespace: s2i-app
    resourceVersion: "1699248"
    selfLink: /apis/route.openshift.io/v1/namespaces/s2i-app/routes/spring-boot-s2i-app-git
    uid: 04cd8c6a-a2e9-11ea-bcc4-0a580a800019
  spec:
    host: spring-boot-s2i-app-git-s2i-app.apps.cluster-nyc-42e2.nyc-42e2.example.opentlc.com
    port:
      targetPort: 8443-8443
    subdomain: ""
    tls:
      termination: passthrough
    to:
      kind: Service
      name: spring-boot-s2i-app-git
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2020-05-31T02:47:08Z"
        status: "True"
        type: Admitted
      host: spring-boot-s2i-app-git-s2i-app.apps.cluster-nyc-42e2.nyc-42e2.example.opentlc.com
      routerCanonicalHostname: apps.cluster-nyc-42e2.nyc-42e2.example.opentlc.com
      routerName: default
      wildcardPolicy: None
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
